--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "mobx": "^6.13.2",
-    "mobx-react-lite": "^4.0.7",
+    "mobx-react": "^9.1.1",
     "mobx-state-tree": "^6.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
